--- a/env/LAB3/templates/client.html
+++ b/env/LAB3/templates/client.html
@@ -1,78 +1,82 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8"/>
-  <link href="client.css" type="text/css" rel="stylesheet">
-  <script src="client.js" type="text/javascript"></script>
-  <script src="serverstub.js" type="text/javascript"></script>
-  <script type="text/view" id="welcomeview">
-  <div class="holder">
-      <div class="leftSide">
-        <img src="wimage.png"/>
-      </div>
-
-      <div class="rightSide">
-        <form id="loginForm">
-          <div>
-            <label for="email">Email</label>
-            <input type="email" name="email" required>
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input type="password" name="password" required>
-          </div>
-          <input id="Login" class="button" type="submit" value="Login">
-        </form>
-
-        <div id = "logInError" class = "errorField" style = "display:none">
-          <span id = "messageLogIn"> <span>
+    <meta charset="utf-8" />
+    <title>Twidder</title>
+    <link href="client.css" type="text/css" rel="stylesheet">
+    <script src="client.js" type="text/javascript"></script>
+    <script src="serverstub.js" type="text/javascript"></script>
+    <script type="text/view" id="welcomeview">
+    <div class="holder">
+        <div class="leftSide">
+            <img src="wimage.png" />
         </div>
 
-        <form id="signupForm">
-          <h2>Sign up here</h2>
-          <div>
-            <label for="name">First name</label>
-            <input type="text" name="name" required>
+        <div class="rightSide">
+            <form id="loginForm">
+                <div class="form-row">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" required>
+                </div>
+                <div class="form-row">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" required>
+                </div>
+                <div>
+                    <input id="Login" class="button" type="submit" value="Login">
+                </div>
+            </form>
+
+          <form id="signupForm">
+              <h2 id="signupTitle">Sign up here</h2>
+
+              <div class="form-row">
+                  <label for="name">First name</label>
+                  <input type="text" name="name" required>
+              </div>
+              <div class="form-row">
+                  <label for="f-name">Family name</label>
+                  <input type="text" name="f-name" required>
+              </div>
+              <div class="form-row">
+                  <label for="gender">Gender</label>
+                  <select id="gender" form="signupForm">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                  </select>
+            </div>
+            <div class="form-row">
+                  <label for="city">City</label>
+                  <input type="text" name="city" required>
+            </div>
+            <div class="form-row">
+                  <label for="country">Country</label>
+                  <input type="text" name="country" required>
+            </div>
+            <div class="form-row">
+                  <label for="Email">Email</label>
+                  <input type="email" name="email" required>
+            </div>
+            <div class="form-row">
+                  <label for="password">Password</label>
+                  <input id="s_password" type="password" name="password" required pattern=".{6,}" title="6 characters minimum" onchange="checkPasswords()">
+            </div>
+            <div class="form-row">
+                  <label for="Rpassword">Repeat PSW</label>
+                  <input id="s_rpassword" type="password" name="Rpassword" required>
+            </div>
+            <div>
+                <br><input class="button" type="submit" value="Sign Up">
+            </div>
+          </form>
+          <div id = "signUpError" class = "errorField" style = "display:none">
+            <span id = "messageSignUp"> <span>
           </div>
-          <div>
-            <label for="f-name">Family name</label>
-            <input type="text" name="f-name" required>
-          </div>
-          <div>
-            <label for="gender">Gender</label>
-            <select id="gender" form="signupForm">
-              <option value="male">Male</option>
-              <option value="female">Female</option>
-            </select>
-          </div>
-          <div>
-            <label for="city">City</label>
-            <input type="text" name="city" required>
-          </div>
-          <div>
-            <label for="country">Country</label>
-            <input type="text" name="country" required>
-          </div>
-          <div>
-            <label for="Email">Email</label>
-            <input type="email" name="email" required>
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input id="s_password" type="password" name="password" required pattern=".{6,}" title="6 characters minimum" onchange="checkPasswords()">
-          <div>
-            <label for="Rpassword">Repeat password</label>
-            <input id="s_rpassword" type="password" name="Rpassword" required>
-          </div>
-          <input class="button" type="submit" value="Sign Up">
-        </form>
-        <div id = "signUpError" class = "errorField" style = "display:none">
-          <span id = "messageSignUp"> <span>
         </div>
       </div>
-    </div>
-  </div>
   </script>
-  <script src="" type="text/view" id="profileview">
+  <script type="text/view" id="profileview">
 
     <ul class="navbar">
       <li> <a  class = "tabLink active" id="navHome" href="javascript:void(0)">Home</a></li>
@@ -89,79 +93,79 @@
           <h3>User Information:</h3>
             <ul class="dataList">
               <li>Name: <span id="nameField"></span></li>
-              <li>Family Name: <span id="fNameField"></span></li>
-              <li>Country: <span id="countryField"></span></li>
-              <li>City: <span id="cityField"></span></li>
-              <li>Gender: <span id="genderField"></span></li>
-              <li>Email: <span id="emailField"></span></li>
-            </ul>
-          </div>
+                    <li>Family Name: <span id="fNameField"></span></li>
+                    <li>Country: <span id="countryField"></span></li>
+                    <li>City: <span id="cityField"></span></li>
+                    <li>Gender: <span id="genderField"></span></li>
+                    <li>Email: <span id="emailField"></span></li>
+                    </ul>
+                </div>
 
-          <form id="msgForm">
-            <div>
-              <label for="message">Message</label>
-              <input type="text" name="message" id = "msgToMe" required>
+                <form id="msgForm">
+                    <div>
+                        <label for="message">Message</label>
+                        <input type="text" name="message" id="msgToMe" required>
+                    </div>
+                    <input class="button" type="submit" value="Send message">
+                </form>
             </div>
-            <input class="button" type="submit" value="Send message">
-          </form>
+
+            <div id="rightSide">
+                <input id="userMsgReloadButton" class="button" type="submit" value="Reload Messages">
+                <div id="userMessageDiv">
+                </div>
+            </div>
+        </div>
         </div>
 
-        <div id="rightSide">
-          <input id="userMsgReloadButton" class="button" type="submit" value="Reload Messages">
-          <div id="userMessageDiv">
-          </div>
-        </div>
-      </div>
-    </div>
+        <div id="browse" class="menu" style="display:none">
+            <div id="user" class="browsetab" style="display:none">
+                <div class="holder">
 
-    <div id="browse" class="menu" style="display:none">
-    <div id="user" class="browsetab" style="display:none">
-      <div class="holder">
+                    <div class="leftSide">
+                        <div id="otherUserData" class="userData">
+                            <h3>User Information:</h3>
+                            <ul class="dataList">
+                                <li>Name: <span id="othNameField"></span></li>
+                                <li>Family Name: <span id="othFNameField"></span></li>
+                                <li>Country: <span id="othCountryField"></span></li>
+                                <li>City: <span id="othCityField"></span></li>
+                                <li>Gender: <span id="othGenderField"></span></li>
+                                <li>Email: <span id="othEmailField"></span></li>
+                            </ul>
+                        </div>
 
-        <div class="leftSide">
-          <div id="otherUserData" class="userData">
-            <h3>User Information:</h3>
-              <ul class="dataList">
-                <li>Name: <span id="othNameField"></span></li>
-                <li>Family Name: <span id="othFNameField"></span></li>
-                <li>Country: <span id="othCountryField"></span></li>
-                <li>City: <span id="othCityField"></span></li>
-                <li>Gender: <span id="othGenderField"></span></li>
-                <li>Email: <span id="othEmailField"></span></li>
-              </ul>
-          </div>
+                        <form id="msgToForm">
+                            <div>
+                                <label for="message">Message</label>
+                                <input type="text" name="message" id="msgTo" required>
+                            </div>
+                            <input class="button" type="submit" value="Send message">
+                        </form>
+                        <a id="back" href="javascript:void(0)">Back</a>
+                    </div>
 
-            <form id="msgToForm">
-              <div>
-                <label for="message">Message</label>
-                <input type="text" name="message" id = "msgTo" required>
-              </div>
-              <input class="button" type="submit" value="Send message">
-            </form>
-            <a id="back" href="javascript:void(0)">Back</a>
-        </div>
-
-        <div id="rightSide">
-          <input id="msgReloadButton" class="button" type="submit" value="Reload Messages">
-          <div id="messageDiv">
-          </div>
-        </div>
+                    <div id="rightSide">
+                        <input id="msgReloadButton" class="button" type="submit" value="Reload Messages">
+                        <div id="messageDiv">
+                        </div>
+                    </div>
 
 
-      </div>
-    </div>
+                </div>
+            </div>
 
-    <div id="search" class="browsetab" style="display:block">
-      <div class="holder">
-        <form id="userSearchForm">
-          <div>
-            <label for="message">Enter Email</label>
-            <input type="text" name="email" required>
-          </div>
-          <input class="button" type="submit" value="Search user">
-        </form>
-        <div id = "searchError" class = "errorField" style = "display:none">
-          <span id = "messageSearch"> <span>
+            <div id="search" class="browsetab" style="display:block">
+                <div class="holder">
+                    <form id="userSearchForm">
+                        <div>
+                            <label for="message">Enter Email</label>
+                            <input type="text" name="email" required>
+                        </div>
+                        <input class="button" type="submit" value="Search user">
+                    </form>
+                    <div id="searchError" class="errorField" style="display:none">
+                        <span id="messageSearch"> <span>
         </div>
       </div>
     </div>
@@ -170,16 +174,16 @@
     <div id="account" class="menu" style="display:none">
       <div class="holder">
         <form id="changePassForm">
-          <div>
-            <label for="current_password">Current Password</label>
+          <div class="form-row">
+            <label for="current_password">Current PSW</label>
             <input type="password" name="current_password" required>
           </div>
-          <div>
-            <label for="new_password">New Password</label>
+          <div class="form-row">
+            <label for="new_password">New PSW</label>
             <input id="s_password" type="password" name="new_password" required pattern=".{6,}" title="6 characters minimum" onchange="checkPasswords()">
           </div>
-          <div>
-            <label for="rnew_password">Repeat New Password</label>
+          <div class="form-row">
+            <label for="rnew_password">Repeat New PSW</label>
             <input id="s_rpassword" type="password" name="rnew_password" required>
           </div>
           <input class="button" type="submit" value="Change Password">
@@ -196,7 +200,7 @@
     </div>
   </script>
 </head>
-<body>
-  <div id="innerDiv"></div>
-</body>
+  <body>
+    <div id="innerDiv"></div>
+  </body>
 </html>
