--- a/templates/client.html
+++ b/templates/client.html
@@ -71,7 +71,10 @@
             </div>
           </form>
           <div id = "signUpError" class = "errorField" style = "display:none">
-            <span id = "messageSignUp"> <span>
+            <span id= "messageSignUpErr"> <span>
+          </div>
+          <div id = "signUpSuccess" class = "successField" style = "display:none">
+            <span id= "messageSignUpSucc"> <span>
           </div>
         </div>
       </div>
